--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ Save File
 </div>
 </div>
 <div class="card-footer text-muted text-center">
-<a href="https://vanhocpham.me">Copyright © 2020 vanhocpham.me</a>
+    <a href="https://vanhocpham.me">Copyright © 2020 vanhocpham.me</a>
+    <a href="//www.dmca.com/Protection/Status.aspx?ID=b024e4df-8169-41bc-83db-eed18122add1" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w100-5x1-09.png?ID=b024e4df-8169-41bc-83db-eed18122add1"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
 </div>
 </div>
 </div>
