update view meta

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta property="og:image" content="https://3.bp.blogspot.com/-kWmj88eUmnM/WxwBfxH1_mI/AAAAAAAAB-A/v08FQI35Ka0HDAMvPteeGbYVV3yAhV8dwCLcBGAs/s1600/2.png">
+<meta property="og:image" content="https://i.postimg.cc/MTgf7n0H/Screenshot-from-2020-02-17-16-19-31.png)](https://vanhocpham.me/generate-virtual-gmail/">
 <meta property="og:site_name" content="vanhocpham.me">
 <title>Generate Virtual Gmail</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
