--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta property="og:image" content="https://i.postimg.cc/MTgf7n0H/Screenshot-from-2020-02-17-16-19-31.png)](https://vanhocpham.me/generate-virtual-gmail/">
+<meta property="og:image" content="https://i.postimg.cc/MTgf7n0H/Screenshot-from-2020-02-17-16-19-31.png">
 <meta property="og:site_name" content="vanhocpham.me">
+<meta name="google-site-verification" content="KAW_faZdTHZV1161x99RTA0owcpQoTa0jOTIciJi0Q4" />
 <title>Generate Virtual Gmail</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
