update meta preview

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta property="og:title" content="Van Hoc Pham">
 <meta property="og:description" content="Show more: https://vanhocpham.me/">
-<meta property="og:image" content="https://i.postimg.cc/MTgf7n0H/Screenshot-from-2020-02-17-16-19-31.png">
+<meta property="og:image" content="https://camo.githubusercontent.com/dd6eef79aa5d28321fd415309d4ecde8ef2605ec/68747470733a2f2f692e706f7374696d672e63632f4d546766376e30482f53637265656e73686f742d66726f6d2d323032302d30322d31372d31362d31392d33312e706e67">
 <meta property="og:site_name" content="vanhocpham.me">
 <meta name="google-site-verification" content="KAW_faZdTHZV1161x99RTA0owcpQoTa0jOTIciJi0Q4" />
     
